# Spotify-cli

./: LICENSE  README.md
spotify-cli/: Cargo.toml
spotify-cli/src/: auth.rs  handlers.rs  main.rs
