[package]
name = "spotify-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
dirs = "5.0.1"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
