[package]
name = "spotify-cli"
version = "0.1.0"
authors = ["Ville Puuska"]
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.20", features = ["cargo", "derive"] }
dirs = "5.0.1"
portpicker = "0.1.1"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
term_size = "0.3.2"
tiny_http = "0.12.0"
tokio = { version = "1.41.0", features = ["full"] }
